scorch/cloud/billet/regex.txt
^([^ :]*):([^:]*):([^:]*): *(note|warning|error): *([^\n]*)$

For output:
/root/test_code/test_code.cc:10:10: warning: missing terminating '"' character [-Winvalid-pp-token]
 #include "forgot_quote
          ^
/root/test_code/test_code.cc:10:10: error: expected "FILENAME" or <FILENAME>
/root/test_code/test_code.cc:14:3: error: use of undeclared identifier 'DNE'
   DNE();
   ^
/root/test_code/test_code.cc:15:34: error: expected ';' after expression
   std::cout << "Forgot semicolon"
                                  ^
                                  ;
fix-it:"/root/test_code/test_code.cc":{15:34-15:34}:";"
1 warning and 3 errors generated.
Error while processing /root/test_code/test_code.cc.
